# open-transcribe

./: .gitignore  README.md  config.py  main.py  notion_service.py  pyproject.toml  recorder.py  setup.py  transcriber.py
.github/workflows/: codeql.yml  python-app.yml
media/: icon.icns
scripts/: build.sh
src/: app.py  config.py  model_selector.py  notion_service.py  recorder.py  settings_window.py  transcriber.py  upload_window.py
tests/: conftest.py  test_app.py  test_config.py  test_model_selector.py  test_notion_service.py  test_recorder.py  test_settings_window.py  test_transcriber.py  test_upload_window.py
