[project]
name = "open-transcribe"
version = "0.1.0"
description = "macOS menu bar meeting recorder with Gemini transcription and Notion sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "google-genai>=1.0.0",
    "notion-client>=2.0.0",
]

[dependency-groups]
dev = [
    "py2app>=0.28",
    "setuptools>=75.0",
]
