[project]
name = "open-transcribe"
version = "0.1.0"
description = "macOS menu bar meeting recorder with Gemini transcription and Notion sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.13.0",
    "google-genai>=1.0.0",
    "notion-client>=2.0.0",
]

[dependency-groups]
dev = [
    "py2app>=0.28",
    "setuptools>=75.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/settings_window.py" = ["N802"]
"src/upload_window.py" = ["N802"]
"tests/test_upload_window.py" = ["N802"]
"setup.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
